--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,242 @@
 /* These styles are just to make it easier to see the blocks, initially. */
-
-body {
-	font-family: monospace;
-	padding: 40px;
+*{
+    box-sizing: border-box;
 }
 
-a {
-	color: royalblue;
+body{
+	font-family: Headline; 	
 }
 
-h1, h2, h3 {
-	font-size: 200%;
+@font-face {
+    font-family: Headline;     
+    src: url(Luna0.3Demo-Heavy.otf);
 }
+
+@font-face {
+    font-family: Title;     
+    src: url(Luna0.3Demo-Light.otf);
+}
+
+
+header{
+	width: 100%;
+	height:200px;
+	position: fixed;
+	z-index: 999;
+	padding: 6vw;
+	background-color: none;
+}
+
+
+#menu_icon{
+	position: fixed;
+	z-index: 8888;
+	top:7vw;
+	right:6vw;
+	width: 3vw;
+	height: auto;
+	cursor:pointer;
+}
+
+#mySidebar{
+	position: fixed;
+	z-index: 666;
+	right:0;
+	top:0;
+	height: 100%;
+	width: 20vw;
+	padding:10vw;
+	line-height: 5vw;
+	background-color: white;
+	overflow:auto;
+	display: none;
+}
+
+#close_icon{
+	position: absolute;
+	margin-left:-6vw;
+	margin-top:-5vw;
+	width: 1.5vw;
+	height: auto;
+	cursor:pointer;
+}
+
+
+#channel-title{
+	font-size: 3vw;
+	color:white;
+}
+
+
+.bg_image {
+    height: 800px;
+    z-index: -1;
+    margin:0;
+    padding: 0;
+    top:0;
+    left:0;
+    }
+
+.fixed {
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        display: table;
+      }
+
+.fixed:nth-child(1){
+	height: 6vw;
+	}	
+.fixed:nth-child(2){
+	height: 6vw;
+	}
+.fixed:nth-child(3){
+	height: 100vw;
+	}	
+.fixed:nth-child(4){
+	height: 100vw;
+	}
+.fixed:nth-child(5){
+	height: 100vw;
+	}
+.fixed:nth-child(6){
+	height: 100vw;
+	}
+.fixed:nth-child(7){
+	height: 100vw;
+	}
+.fixed:nth-child(8){
+	height: 100vw;
+	}
+.fixed:nth-child(9){
+	height: 100vw;
+	}
+
+
+
+.blank{
+	background-image: url(images/7.png)
+}
+.one {
+    background-image: url(images/8.png)
+      }
+.two {
+        background-image: url(images/2.png)
+    }
+.three {
+        background-image: url(images/3.png)
+      }
+.seven {
+        background-image: url(images/1.png)
+      }
+.eight {
+        background-image: url(images/9.png)
+      }
+.nine {
+        background-image: url(images/7.png)
+      }
+.ten {
+        background-image: url(images/10.png)
+      }
+
+
+#credits{
+	top:-10vw;
+	left:12vw;
+	color:black;
+	font-size: 1.2vw;
+	z-index: 99;
+}
+
+#credits p{
+	line-height: 2vw;
+	font-family: Headline;
+}
+
+
+section{
+	position: relative;
+	left:12vw;
+	margin:0;
+}
+
+.two-column{
+	display: flex;
+	column-gap:2vw;
+	margin-top: -40vw;
+
+}
+
+.two-column section{
+	display: inline-block;
+}
+
+
+
+.audio-embed-blocks,
+.audio-file-blocks,
+.image-blocks,
+.embed-blocks,
+.link-blocks,
+.pdf-blocks,
+.text-blocks,
+.video-embed-blocks,
+.video-file-blocks{
+	background-color: none;
+}
+
+
 
 section,
 figure {
-	margin-top: 80px;
-	max-width: 600px;
+	max-width: 36vw;
+	margin:5vw 4vw 10vw 0;
 }
+
+
+
+a {
+	color: black;
+}
+
+h1, h2, h3 {
+	font-size: 1.5vw;
+}
+
+
+.description, p{
+	font-family: Title;
+	line-height: 1.8vw; 
+	letter-spacing: -0.05vw;
+}
+
+.type{
+	color:#666666;
+}
+
+
+
+
+@media (max-width: 768px){
+	.two-column{
+		column-gap:8vw;
+	}
+}
+
+
+@media (max-width: 375px){
+	.two-column{
+		column-gap:5vw;
+	}
+
+}
+
+
+
 
 #channel-description > *,
 figure > *:not(:first-child),
